--- a/extensionDirectory/src/popup.html
+++ b/extensionDirectory/src/popup.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <link href="../css/popup.css" rel="stylesheet" type="text/css" />
-    <script id="script" src="components.js"></script>
     <script id="script" src="popup.js"></script>
-    <!-- <script id="script" src="filings.js"></script> -->
+	<!-- TODO: is it possible to avoid having popup.html import filings.js? I think so... -->
+    <script id="script" src="filings.js"></script>
+    <!-- <script id="script" src="components.js"></script> -->
   </head>
 
   <body>
