--- a/extensionDirectory/src/manage-counts.html
+++ b/extensionDirectory/src/manage-counts.html
@@ -2,32 +2,9 @@
 <html lang="en">
   <head>
     <title>Add and Edit Counts</title>
-    <link href="filings.css" rel="stylesheet" type="text/css" />
-
-    <!-- jQuery -->
-    <script src="./node_modules/jquery/dist/jquery.js"></script>
-
-    <!-- Bootstrap -->
-    <link
-      rel="stylesheet"
-      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
-    />
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <!-- vue -->
-    <script src="./node_modules/vue/dist/vue.js"></script>
-
-    <!-- Smooth-Scroll -->
-    <script src="./node_modules/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
-
-    <!-- Gumshoe -->
-    <script src="./node_modules/gumshoejs/dist/gumshoe.polyfills.min.js"></script>
-
-    <!-- font awesome -->
-    <link
-      rel="stylesheet"
-      href="./node_modules/@fortawesome/fontawesome-free/css/all.css"
-    />
+    <link href="../css/filings.css" rel="stylesheet" type="text/css" />
+    <script id="script" src="filings.js"></script>
+    <!-- <script id="script" src="components.js"></script> -->
   </head>
 
   <body id="manage-counts">
@@ -272,7 +249,5 @@
     </div>
 
     <!-- End Vue App -->
-    <script id="script" src="components.js"></script>
-    <script id="script" src="filings.js"></script>
   </body>
 </html>
