WIP: named Vue import

--- a/extensionDirectory/src/filings.html
+++ b/extensionDirectory/src/filings.html
@@ -3,9 +3,6 @@
   <head>
     <title>Petitions</title>
     <link href="../css/filings.css" rel="stylesheet" type="text/css" />
-    <script id="script" src="filings.js"></script>   
-    <!-- <script id="script" src="components.js"></script> -->
-    <script id="script" src="csv.js"></script>
   </head>
 
   <body id="filing-page">
@@ -1100,6 +1097,9 @@
       </template>
     </div>
     <!-- End Vue App -->
- 
+
+    <script id="script" src="filings.js"></script>   
+    <script id="script" src="components.js"></script>
+    <script id="script" src="csv.js"></script> 
   </body>
 </html>
