typo interests of justice fix

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -657,7 +657,7 @@
                           <span v-if="filing.multipleCounts"
                             >these convictions</span
                           ><span v-else>this conviction</span> is in the
-                          interest of justice because:
+                          interests of justice because:
                         </p>
                       </div>
 
@@ -744,7 +744,7 @@
                           <span v-if="filing.multipleCounts"
                             >these dismissed charges</span
                           ><span v-else>this dismissed charge</span> serves the
-                          interest of justice, as
+                          interests of justice, as
                         </p>
                       </div>
 
@@ -824,7 +824,7 @@
                         </p>
                         <p>
                           3. Expunging all record of this conviction serves the
-                          interest of justice.
+                          interests of justice.
                         </p>
                       </div>
 
@@ -990,7 +990,7 @@
                           4. All restitution ordered here has been paid in full.
                         </p>
                         <p>
-                          5. Sealing this record serves the interest of justice,
+                          5. Sealing this record serves the interests of justice,
                           as
                         </p>
                       </div>
