amend sealing petition

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -893,15 +893,15 @@
                           </tbody>
                         </table>
                         <p>
-                          2. Petitioner was under 21 when the crime<span
+                          2. Petitioner was under 25 when the crime<span
                             v-if="filing.multipleCounts"
                             >s were</span
-                          ><span v-else> was</span> allegedly committed.
+                          ><span v-else> was</span> committed.
                         </p>
 
                         <p>
                           3. Petitioner was not later convicted of a listed
-                          crime, pursuant to 13 V.S.A. &sect; 5301(7), nor is
+                          crime, pursuant to 13 V.S.A. &sect; 5301(7), within the last 10 years, nor is
                           petitioner currently being charged of such an offense.
                         </p>
                         <p>
