--- a/extensionDirectory/manage-counts.html
+++ b/extensionDirectory/manage-counts.html
@@ -171,11 +171,11 @@
           <div>
             <label>
                 <p
-                  v-if="!checkDocketMatch(group.docketSheetNum, group.docketNum, group.county)"
-                  class="alert alert-danger"
+                  v-if="!checkDocketMatch(group.docketSheetNum, group.docketNum, group.county) && (group.docketNum && group.county)"
+                  class="alert alert-warning"
                 >
-                  WARNING: Docket sheet number must match docket number above or
-                  an error will result. <span v-if="group.county">The following county code must be written below with a single space next to the docket number: {{group.county | toCountyCode}}.</span> <span v-else>County must be selected above.</span>
+                  WARNING - Unexpected format: the petition page may not render correctly.<br/> 
+                  Expected to see the docket number followed by the county code: <span>"{{group.docketNum}} {{group.county | toCountyCode}}"</span>
                 </p>
               <span>Original Docket Sheet Number</span>
               <input
