working with loading file

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -167,10 +167,10 @@
                 Print All
               </button>
               <button
-                v-on:click="exportContent"
+                v-on:click="saveHtml"
                 class="btn btn-primary no-print"
               >
-                Export to CSV
+                Save
               </button>
               <a href="manage-counts.html" class="edit-counts btn btn-primary"
                 >Add/Edit Counts <i class="fas fa-edit"></i
@@ -1169,6 +1169,6 @@
 
     <script id="script" src="components.js"></script>
     <script id="script" src="filings.js"></script>
-    <script id="script" src="csv.js"></script>
+    <script id="script" src="saveFile.js"></script>
   </body>
 </html>
