--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -57,6 +57,12 @@
             Add From Page <i class="fas fa-plus-circle"></i>
           </button>
           <button
+            v-on:click="loadCaseFile"
+            class="add-docket-info btn btn-primary"
+          >
+            Load Case File<br><i class="fas fa-file"></i>
+          </button>
+          <button
             v-on:click="addAndOpenManagePage"
             class="edit-counts btn btn-primary"
           >
@@ -72,7 +78,10 @@
           href="https://publicportal.courts.vt.gov/Portal"
         >
           <p id="vtCourtsOnline">
-            <b>Vermont Judiciary Public Portal <i class="fas fa-external-link-alt"></i></b>
+            <b
+              >Vermont Judiciary Public Portal
+              <i class="fas fa-external-link-alt"></i
+            ></b>
           </p>
         </a>
         <a target="_blank" href="disclaimer.html" class="title-page__link">
