Styling; popup edition label; create fee waiver form

--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -49,6 +49,9 @@
             class="logos"
           />
         </div>
+        <div class="popup-edition-wrap">
+          <p class="popup-edition">ExpungeVT 4.0 - Co-counsel Edition</p>
+        </div>
         <div class="inset text-center button-div">
           <button
             v-on:click="addDocketCounts"
