email language and warning notice

--- a/extensionDirectory/filings.html
+++ b/extensionDirectory/filings.html
@@ -552,6 +552,8 @@
                             <span class="italic">pro se</span>, and hereby
                             enters this notice of appearance in the above
                             captioned action.
+                            <br><br>
+                            By signing this notice of appearance below, I herby agree to the acceptance of all electronic filings at this email address: <b>{{petitioner.email}}</b>.
                           </template>
                           <template v-else>
                             NOW COMES <span>{{settings['attorney']}}</span>, by
