--- a/extensionDirectory/popup.html
+++ b/extensionDirectory/popup.html
@@ -120,6 +120,14 @@
                 placeholder="e.g. 123 Main Street"
               ></textarea>
             </div>
+            <div class="pet-item">
+              <p class="pet-label">Email:</p>
+              <input
+                type="text"
+                class="form-control form-control-sm"
+                v-model="saved.defEmail"
+              />
+            </div>
           </div>
           <div id="logoDiv">
             <button
